--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -3,12 +3,16 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.myapplication.MainActivity">
+        tools:context="com.example.myapplication.PlayerActivity">
 
-    <ListView
-            android:id="@+id/listview"
+    <com.bitmovin.player.BitmovinPlayerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentTop="true" />
+            android:id="@+id/bitmovinPlayerView"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
+
+    </com.bitmovin.player.BitmovinPlayerView>
 
 </RelativeLayout>
